https_tomcat/https_tomcat-ing.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
  namespace: default
spec:
  selector:
    app: tomcat
    release: canary
  ports:
  - name: http
    targetPort: 8080
    port: 8080
  - name: ajp
    targetPort: 8009
    port: 8009

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-tomcat-ingress
spec:
  tls:
  - hosts:
      - tomcat.kris.com
    secretName: tomcat-ingress-secret
  rules:
  - host: tomcat.kris.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tomcat-svc
            port:
              number: 8080
